fixed text align and input focus

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -127,15 +127,14 @@ html {
   .select2-container--default .select2-selection--single .select2-selection__rendered {
     color: $heading;
     font-size: 1rem;
-
   }
 
   .select2-container--default .select2-search--dropdown .select2-search__field {
     color: $heading;
     font-size: 1rem;
-margin:0;
-padding: 0;
-
+    text-align: center;
+    margin: 0;
+    padding: 0;
   }
 
   span.state__box {
@@ -143,6 +142,10 @@ padding: 0;
     background: darken($heading,50%);
     color: white;
     height: 2rem;
+
+    &:focus {
+      outline: none;
+    }
   }
 
   .state__dropdown {
